--- a/webApp/static/css/styles.css
+++ b/webApp/static/css/styles.css
@@ -1,6 +1,17 @@
-/*
-Custom CSS Styles
-*/
+/* roboto-mono-regular - latin */
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/roboto-mono-v5-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Roboto Mono'), local('RobotoMono-Regular'),
+       url('./fonts/roboto-mono-v5-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/roboto-mono-v5-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/roboto-mono-v5-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/roboto-mono-v5-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/roboto-mono-v5-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
+}
+/* Custom CSS Styles */
 body {
 	padding-top: 60px;
 }
@@ -19,8 +30,12 @@ body {
     max-width: 1200px;
 }
 .code, textarea {
-    font-family: "Courier New", Courier, monospace;
-    font-size: 1em;
+    font-family: 'Roboto Mono', Consolas, monaco, monospace;
+	font-size: 1em;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 18.5714px;
 	white-space: pre-wrap;
 }
 div.scroll {
