--- a/webApp/templates/static/nav.html
+++ b/webApp/templates/static/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
 	<div class="navbar-brand">
 		<img src="{{ url_for('static', filename='img/favicon/favicon.ico') }}" alt="Logo" />
 		<a href="https://github.com/oasis-open/openc2-jadn/" target="_blank">JADN</a>&nbsp;Lint
