Added beta branding

--- a/webApp/templates/static/base.html
+++ b/webApp/templates/static/base.html
@@ -15,6 +15,9 @@
     </head>
 
     <body>
+		<div class="ribbon ribbon-top-left">
+			<span>Beta</span>
+		</div>
         {% block body %}{% endblock %}
     </body>
     {% block page_script %}{% endblock %}
