--- a/webApp/static/css/styles.css
+++ b/webApp/static/css/styles.css
@@ -16,18 +16,18 @@ body {
 	padding-top: 60px;
 }
 .navbar-brand > img {
-  max-height: 2em;
-  width: auto;
-  -moz-padding: 15px; /* firefox bug fix */
+    max-height: 2em;
+    width: auto;
+    -moz-padding: 15px; /* firefox bug fix */
+}
+.container-fluid .row > * {
+    max-width: 1200px;
 }
 #alert-container {
 	z-index: 100;
 	position: fixed;
 	bottom: 1em;
 	right: 1em;
-}
-.container-fluid .row > * {
-    max-width: 1200px;
 }
 .code, textarea {
     font-family: 'Roboto Mono', Consolas, monaco, monospace;
@@ -46,7 +46,66 @@ div.scroll-large {
     max-height: 40em;
     overflow: scroll;
 }
-
+/* Ribbon CSS */
+@import url(https://fonts.googleapis.com/css?family=Lato:700);
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #f0f0f0;
+}
+/* common */
+.ribbon {
+  	width: 100px;
+  	height: 100px;
+  	overflow: hidden;
+  	position: absolute;
+	opacity: 0.75;
+	z-index: 2000;
+}
+.ribbon::before, .ribbon::after {
+  	position: absolute;
+  	z-index: -1;
+  	content: '';
+  	display: block;
+  	border: 5px solid #b92929;
+}
+.ribbon span {
+  	position: absolute;
+  	display: block;
+  	width: 150px;
+  	padding: 10px 0;
+  	background-color: #b92929;
+  	box-shadow: 0 5px 10px rgba(0,0,0,.1);
+  	color: #fff;
+  	font: 700 16px/1 'Lato', sans-serif;
+  	text-shadow: 0 1px 1px rgba(0,0,0,.2);
+  	text-transform: uppercase;
+  	text-align: center;
+}
+/* top left */
+.ribbon-top-left {
+  	top: -26px;
+  	left: -26px;
+}
+.ribbon-top-left::before, .ribbon-top-left::after {
+  	border-top-color: transparent;
+  	border-left-color: transparent;
+}
+.ribbon-top-left::before {
+  	top: 0;
+  	right: 0;
+}
+.ribbon-top-left::after {
+  	bottom: 0;
+  	left: 0;
+}
+.ribbon-top-left span {
+  	right: -25px;
+  	top: 30px;
+  	transform: rotate(-45deg);
+}
 // Extra small devices (portrait phones, less than 576px)
 // No media query since this is the default in Bootstrap
 
