Updated client and server side for validation and conversion, added gui editor for jadn schemas

--- a/server/webApp/templates/index.html
+++ b/server/webApp/templates/index.html
@@ -1,1 +1,16 @@
-<h1>TEST</h1>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>JADN Lint</title>
+    <meta name="mobile-web-app-capable" content="yes"><meta name="theme-color" content="#ffffff"><meta name="application-name" content="Orchestrator UI"><link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-touch-icon-57x57.png"><link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-touch-icon-60x60.png"><link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-touch-icon-76x76.png"><link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-touch-icon-114x114.png"><link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-touch-icon-120x120.png"><link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon-144x144.png"><link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-touch-icon-152x152.png"><link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><meta name="apple-mobile-web-app-title" content="Orchestrator UI"><link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png"><link rel="shortcut icon" href="img/favicons/favicon.ico"><link href="css/main.bundle.css" rel="stylesheet"></head>
+
+    <body>
+        <noscript>
+          You need to enable JavaScript to run this application.
+        </noscript>
+        <div id="root"></div>
+    <script type="text/javascript" src="js/main.bundle.js"></script></body>
+</html>
