--- a/server/webApp/templates/index.html
+++ b/server/webApp/templates/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>JADN Lint</title>
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#ffffff">
-        <meta name="application-name" content="JADN Lint">
-        <link rel="apple-touch-icon" sizes="57x57" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-57x57.png') }}">
-        <link rel="apple-touch-icon" sizes="60x60" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-60x60.png') }}">
-        <link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-72x72.png') }}">
-        <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-76x76.png') }}">
-        <link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-114x114.png') }}">
-        <link rel="apple-touch-icon" sizes="120x120" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-120x120.png') }}">
-        <link rel="apple-touch-icon" sizes="144x144" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-144x144.png') }}">
-        <link rel="apple-touch-icon" sizes="152x152" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-152x152.png') }}">
-        <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-180x180.png') }}">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-title" content="JADN Lint">
-        <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='img/favicons/favicon-32x32.png') }}">
-        <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='img/favicons/favicon-16x16.png') }}">
-        <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicons/favicon.ico') }}">
-        <link href="{{ url_for('static', filename='css/vendors.bundle.min.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/main.bundle.min.css') }}" rel="stylesheet">
-    </head>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>JADN Lint</title>
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="theme-color" content="#ffffff">
+		<meta name="application-name" content="JADN Lint">
+		<link rel="apple-touch-icon" sizes="57x57" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-57x57.png') }}">
+		<link rel="apple-touch-icon" sizes="60x60" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-60x60.png') }}">
+		<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-72x72.png') }}">
+		<link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-76x76.png') }}">
+		<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-114x114.png') }}">
+		<link rel="apple-touch-icon" sizes="120x120" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-120x120.png') }}">
+		<link rel="apple-touch-icon" sizes="144x144" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-144x144.png') }}">
+		<link rel="apple-touch-icon" sizes="152x152" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-152x152.png') }}">
+		<link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/favicons/apple-touch-icon-180x180.png') }}">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		<meta name="apple-mobile-web-app-title" content="JADN Lint">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="mstile-144x144.png">
+		<meta name="msapplication-config" content="browserconfig.xml">
+		<link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='img/favicons/favicon-32x32.png') }}">
+		<link rel="icon" type="image/png" sizes="16x16" href="i{{ url_for('static', filename='mg/favicons/favicon-16x16.png') }}">
+		<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicons/favicon.ico') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-320x460.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-640x920.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-640x1096.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-750x1294.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-1182x2208.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-1242x2148.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 1)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-748x1024.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 1)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-768x1004.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-1496x2048.png') }}">
+		<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-1536x2008.png') }}">
+		<link href="{{ url_for('static', filename='css/vendors.bundle.min.css') }}" rel="stylesheet">
+		<link href="{{ url_for('static', filename='css/main.bundle.min.css') }}" rel="stylesheet">
+	</head>
 
     <body>
         <noscript>
