--- a/server/webApp/templates/index.html
+++ b/server/webApp/templates/index.html
@@ -24,7 +24,7 @@
 		<meta name="msapplication-TileImage" content="mstile-144x144.png">
 		<meta name="msapplication-config" content="browserconfig.xml">
 		<link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='img/favicons/favicon-32x32.png') }}">
-		<link rel="icon" type="image/png" sizes="16x16" href="i{{ url_for('static', filename='mg/favicons/favicon-16x16.png') }}">
+		<link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='img/favicons/favicon-16x16.png') }}">
 		<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicons/favicon.ico') }}">
 		<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-320x460.png') }}">
 		<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" href="{{ url_for('static', filename='img/favicons/apple-touch-startup-image-640x920.png') }}">
